# DiaGen.CLI

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/arc42/: 01_Introduction_and_Goals.md  02_Constraints.md  03_Context_and_Scope.md  04_Solution_Strategy.md  05_Building_Block_View.md  06_Runtime_View.md  07_Deployment_View.md  08_Crosscutting_Concepts.md  09_Architecture_Decisions.md  10_Quality_Requirements.md  11_Risks_and_Technical_Debt.md  12_Glossary.md  README.md
docs/c4/: system_context.puml  technical_context.puml
scripts/: make_helpers.py
src/diagen/: __init__.py  cli.py
src/diagen/core/: __init__.py  plugin_contracts.py
tests/: test_cli.py
