[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diagen"
version = "0.1.0"
description = "DiaGen CLI for automation scripts and pipelines."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "DiaGen Team" }
]
dependencies = [
  "typer>=0.12,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.4,<1.0",
  "commitizen>=3.27,<4.0"
]

[project.scripts]
diagen = "diagen.cli:run"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_scheme = "semver"
update_changelog_on_bump = true
version_files = [
  "pyproject.toml:version",
  "src/diagen/__init__.py:__version__"
]
