[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diagen"
version = "0.1.3"
description = "DiaGen CLI for automation scripts and pipelines."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "DiaGen Team" }
]
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "commitizen"
]

[project.scripts]
diagen = "diagen.cli:run"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.3"
tag_format = "v$version"
version_scheme = "semver"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
version_files = [
  "pyproject.toml:version",
  "src/diagen/__init__.py:__version__"
]
